<resources>
    <string name="app_name">eCareZone Doctor</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_for_new_user">For new user</string>
    <string name="login_create_account">Register as eCareZone Doctor</string>
    <string name="registration_title">Register as eCareZone doctor</string>
    <string name="registration_username">@string/login_username</string>
    <string name="registration_email">Your email</string>
    <string name="registration_password">@string/login_password</string>
    <string name="registration_country">Country:</string>
    <string name="registration_create_account">Register</string>
    <string name="registration_agreement">You agree the terms and privacy policy</string>
    <string name="thanks_for_registration">Thanks for your registration as \n eCareZone doctor!</string>
    <string name="start_to_use">Start to use the service</string>
    <string name="registration_agreement_you_agree">You agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="bottom_arrow">&#129171;</string>
    <string name="main_profile_title">Profile</string>
    <string name="main_side_menu_messages">Messages</string>
    <string name="main_side_menu_my_patients">My patients</string>
    <string name="main_side_menu_news">News feed</string>
    <string name="main_side_menu_appointments">Appointments</string>
    <string name="main_side_menu_settings">Settings</string>
    <string name="main_side_menu_logout">Log out</string>
    <string name="welcome_title">Welcome to eCareZone</string>
    <string name="welcome_message">Need welcome text for Doctor</string>
    <string name="welcome_personal_profile">Please take few minutes to \n file your personal information, it \n will help patients to recognize you.</string>
    <string name="welcome_button_not_now">Cancel</string>
    <string name="welcome_button_ok">@android:string/ok</string>
    <string name="welcome_button_cancel">@android:string/cancel</string>
    <string name="welcome_empty_message">You don\'t have any new messages </string>
    <string name="news_actionbar_title">News feed</string>
    <string name="profile_add_your_profile">Add your profile</string>
    <string name="profile_mine">My profile</string>
    <string name="profile_actionbar_title">Profile</string>
    <string name="profile_details_name">Name</string>
    <string name="profile_details_gender">Gender</string>
    <string name="patient_profile_details_gender">Gender : </string>
    <string name="profile_details_address">Address : </string>
    <string name="profile_details_birth">Date of Birth</string>
    <string name="patient_profile_details_birth">Date of Birth : </string>
    <string name="profile_details_ethnicity">Ethnicity : </string>
    <string name="profile_details_height">Height : </string>
    <string name="profile_details_weight">Weight : </string>
    <string name="profile_details_profile_name">Profile Name</string>
    <string name="patient_profile_details_profile_name">Profile Name : </string>
    <string name="profile_details_hint">-</string>
    <string name="profile_details_delete_profile">Delete Profile</string>
    <string name="profile_add_people_you_care">Add people you care</string>
    <string name="ProfileFormEditTextStyle">Specialized areas</string>
    <string name="profile_details_registration_id">Registration ID</string>
    <string name="profile_details_my_bio">My bio</string>
    <string name="profile_details_edit">Edit</string>
    <string name="invalid_birth_date">Invalid birth date</string>
    <string name="imageutil_camera_not_found">Camera application not found</string>
    <string name="progress_dialog_loading">Loading</string>
    <string name="progress_dialog_delete">Deleting</string>
    <string name="progress_dialog_save">Saving</string>
    <string name="progress_dialog_search">Searching</string>
    <string name="progress_dialog_create_account">Creating account</string>
    <string name="progress_dialog_logout">Logging out</string>
    <string name="progress_dialog_requesting">Requesting</string>
    <string name="settings_email">Email:</string>
    <string name="settings_password">Password:</string>
    <string name="settings_country">Choose Your Country</string>
    <string name="settings_language">Choose Your Language</string>
    <string name="settings_about_app">About eCareZone</string>
    <string name="settings_action_check">Check</string>
    <string-array name="country_array">
        <item>China</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>Norway</item>
        <item>Sweden</item>
    </string-array>
    <string-array name="country_code_array">
        <item>CN</item>
        <item>DK</item>
        <item>FI</item>
        <item>NO</item>
        <item>SE</item>
    </string-array>
    <string-array name="language_array">
        <item>English</item>
        <item>Chinese</item>
        <item>Swedish</item>
        <item>Norwegian</item>
        <item>Finnish</item>
    </string-array>
    <string-array name="language_local_array">
        <item>en</item>
        <item>zh</item>
        <item>sv</item>
        <item>nn</item>
        <item>fi</item>
    </string-array>
    <string name="language_english">English</string>
    <string name="language_local_english">en</string>
    <string name="message_title">Smith</string>
    <string name="message_description">Hey may I ask something</string>
    <string name="message_date">Monday</string>
    <string name="new_patient_request">New Patient Request</string>
    <string name="patient_pending_request">Pending request</string>
    <string name="patient_pending_request_accept">Accept</string>
    <string name="patient_pending_request_reject">Reject</string>
    <string name="patient_chat_history">Chat History</string>
    <string name="no_patient">You don\'t have any patients.</string>
    <string name="doctor_my_doctors">My doctors</string>
    <string name="doctor_recommended_doctors">Recommended doctors</string>
    <string name="doctor_name1">John Smith</string>
    <string name="doctor_name2">Dr. Steven Harris</string>
    <string name="doctor_name3">Dr. Song Yi</string>
    <string name="doctor_type1">Cardiologist</string>
    <string name="doctor_type2">General practitioner</string>
    <string name="doctor_available">Available</string>
    <string name="doctor_idle">Idle</string>
    <string name="doctor_busy">Offline</string>
    <string name="doctor_search">Search</string>
    <string name="doctor_search_hint_text">Search doctors</string>
    <string name="doctor_add_my_care_team">ADD TO MY CARE-TEAM</string>
    <string name="doctor_bio">Patient bio</string>
    <string name="doctor_mycare_team">My Care-team</string>
    <string name="doctor_add_request_success">your request has been sent to\nDr. %1$s</string>
    <string name="home_last_news_feed">The latest news feed</string>
    <string name="home_new_messages">New messages</string>
    <string name="home_user_message">Hi,\n\nWe have new doctor recommended for your case!</string>
    <string name="home_see_profile">See profile</string>
    <string name="home_page_without_message">You don\'t have any new messages. </string>
    <string name="doctor_details_chat">Chat</string>
    <string name="doctor_details_video">Video call</string>
    <string name="doctor_details_voice">VoIP</string>
    <string name="doctor_details_chat_history">CHAT HISTORY</string>
    <string name="video_chat_stop_btn_text">END CALL</string>
    <string name="video_incoming_call_answer_btn_text">ANSWER</string>
    <string name="video_incoming_call_decline_btn_text">DECLINE</string>
    <string name="video_incoming_call_title_text">Incoming call</string>
    <string name="error_user_login">Invalid username or password</string>
    <string name="error_user_registration">@string/error_user_login</string>
    <string name="error_user_name">Please enter a valid email address as user name</string>
    <string name="error_password_less_than_registration">Password must be minimum 8 character</string>
    <string name="error_current_password">Current Password is Not Correct</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="welcome_button_send">send</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="photo_options">
        <item>Select from gallery</item>
        <item>Capture from camera</item>
    </string-array>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="reset_password_email_hint">Enter Your Email</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_notification">Your new password will be sent \nto by email</string>
    <string name="reset_password_error">Your email account is incorrect. Please try \n in if you are register user</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="gallery_chooser_select_picture">Select photo</string>
    <string name="splash_screen_for_doctors">FOR DOCTORS</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Confirm New Password</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="password_mismatch">New password and confirm password fields do not match</string>
    <string-array name="array_name">
        <item>Select</item>
        <item>Brain</item>
        <item>Surgery</item>
        <item>Heart</item>
        <item>Kidney</item>
        <item>Lungs</item>
    </string-array>
    <string name="message_adapter_key">message_adapter_key</string>
    <string name="message_adapter_viewholder_key">message_adapter_viewholder_key</string>
    <string name="appointment_accepted">Appointment accepted</string>
    <string name="appointment_rejected">Appointment rejected</string>
    <string name="change_date_n_time">Change date&amp;time</string>
    <string name="cancel_appointment">Cancel appointment</string>
    <string name="cancelling_appointment">Cancelling appointment, please wait...</string>
    <string name="appointment_detail_1">Appointment detail</string>
    <string name="doctor_appointment">Make an appointment</string>
    <string name="doctor_appointment_header">Appointments</string>
    <string name="appointment_time">Time</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="change_date_and_time">Change date and time</string>
    <string name="appointment_deleted">Appointment successfully cancelled</string>
    <string name="appointment_rescheduled">Appointment re-scheduled to</string>
    <string name="rescheduling_appointment">Rescheduling appointment, please wait...</string>
    <string name="reschedule_appointment">Reschedule appointment</string>
    <string name="invalid_date">Please enter valid date</string>
    <string name="no_slots_open">There is a conflict with the requested appointment. Please try another slot</string>
    <string name="book">Book</string>
    <string name="thirty_mins">30 min</string>
    <string name="appointment_cannot_be_set">Appointment date cannot be set for a past time/date.</string>
    <string name="email_to">For any Support with the EcareZone Account,\n  please mail to </string>
    <string name="email_id"><u>Customersupport@Ecarezone.com</u></string>
    <string name="pending_req">Pending request</string>
    <string name="language">Language:</string>
</resources>