<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textColor="#000"
        android:text="@string/reset_password"
        android:padding="15dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textColor="#000"
        android:text="@string/reset_password_notification"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/editText_ForgetPwd"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:hint="@string/reset_password_email_hint"
        />
    <TextView
        android:id="@+id/textview_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/reset_password_error"
        android:visibility="invisible"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"/>
    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:minWidth="220dp"
        android:padding="15dp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:text="@string/welcome_button_send"
        style="@style/EcareZoneBlueButton"
        />

</LinearLayout>