<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/take_photo"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/takePhoto"
        android:inputType="textCapCharacters"
        android:textColor="@color/ecarezone_blue_dark"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/choose_photo"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:id="@+id/choosePhoto"
        android:inputType="textCapCharacters"
        android:textColor="@color/ecarezone_blue_dark"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/welcome_button_cancel"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:id="@+id/okButton"
        android:textColor="@color/ecarezone_green_dark"/>

</LinearLayout>