<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/welcome_title"
                android:textColor="@color/ecarezone_blue_dark"
                android:textSize="@dimen/text_size_very_big" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/welcome_dialog"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/welcome_personal_profile"
                    android:textColor="@color/ecarezone_blue_light"
                    android:textSize="@dimen/text_size_normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <Button
                        android:id="@+id/button_welcome_not_now"
                        style="@style/EcareZoneGreenButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/welcome_button_not_now" />

                    <Button
                        android:id="@+id/button_welcome_ok"
                        style="@style/EcareZoneGreenButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/welcome_button_ok" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/emptyMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_empty_message"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:visibility="invisible"/>

</RelativeLayout>


