<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appointment_pending_layout_"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="14dp"
    android:background="@drawable/blue_rectangle_layout_selector"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="1">
    <com.ecarezone.android.doctor.view.CircleImageView
        android:id="@+id/appointment_patient_avatar_of_request"
        android:layout_width="@dimen/appointment_thumbnail_edge_size"
        android:layout_height="@dimen/appointment_thumbnail_edge_size"
        android:layout_margin="4dp"
        android:src="@drawable/dr_john_photo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"

        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.75">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_time"
            android:id="@+id/appointment_time"
            android:textSize="20sp"
            android:textColor="@color/text_black_color_selector"
            />

        <TextView
            android:id="@+id/type_of_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name1"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name1"
            android:textSize="16sp"
            android:paddingBottom="5dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/patient_appointment_request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_pending_request_accept"
                android:textColor="@color/ecarezone_green_dark"
                android:background="@drawable/btn_green_border_selector"
                android:layout_weight="0.3" />


            <Button
                android:id="@+id/patient_appointment_request_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/patient_pending_request_reject"
                android:textColor="@color/ecarezone_red"
                android:background="@drawable/btn_red_border"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

