<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doctor_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/blue_rectangle_layout_selector"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/message_avatar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:minWidth="72dp"
        android:scaleType="fitCenter"
        android:src="@drawable/message_icon" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/message_title"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/message_title"
                android:textColor="@color/text_black_color_selector"
                android:textSize="20sp"
                android:layout_weight="0.39" />

            <TextView
                android:id="@+id/message_date"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:text="@string/message_date"
                android:textColor="@color/text_gray_color_selector"
                android:textSize="16sp" />

        </LinearLayout>



        <TextView
            android:id="@+id/message_description"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/message_description"
            android:textColor="@color/text_gray_color_selector"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>